helm-argocd/petapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petapp-service
spec:
  selector:
    app: petapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
